// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> component should render default text area 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #252525;
  cursor: inherit;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ffffff;
  min-height: 100px;
  width: 100%;
  outline: none;
  color: #252525;
  resize: none;
  padding: 12px;
  border: 0;
  margin-top: 8px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-2::-webkit-input-placeholder {
  color: #3e3e3e;
}

.emotion-2::-moz-placeholder {
  color: #3e3e3e;
}

.emotion-2:-ms-input-placeholder {
  color: #3e3e3e;
}

.emotion-2::placeholder {
  color: #3e3e3e;
}

.emotion-2:focus-within,
.emotion-2:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-2:-moz-read-only:not(:disabled) {
  border-color: #e6e6e6;
  color: #3e3e3e;
  background-color: #f2f2f2;
}

.emotion-2:read-only:not(:disabled) {
  border-color: #e6e6e6;
  color: #3e3e3e;
  background-color: #f2f2f2;
}

.emotion-2:-moz-read-only:not(:disabled):focus-within {
  border: 1px solid #00677f;
}

.emotion-2:-moz-read-only:not(:disabled):hover {
  border: 1px solid #00677f;
}

.emotion-2:read-only:not(:disabled):focus-within,
.emotion-2:read-only:not(:disabled):hover {
  border: 1px solid #00677f;
}

.emotion-2:disabled {
  cursor: not-allowed;
  color: #a9a9a9;
}

<div>
  <div
    class="emotion-0"
    style="position: relative; align-items: flex-start;"
  >
    <label
      class="emotion-1"
      data-testid="label-field"
      for="my-awesome-text-area-textarea"
      style="z-index: 1;"
    >
      My awesome text area
    </label>
    <textarea
      class="emotion-2 emotion-3"
      data-error="false"
      data-testid="my-awesome-text-area-textarea"
      id="my-awesome-text-area-textarea"
      name="awesome-textarea"
    >
      some value
    </textarea>
    <div
      class="emotion-0"
      style="flex-direction: row; justify-content: space-between; width: 100%; padding-inline: 12px; gap: 8px; margin-top: 4px;"
    />
  </div>
</div>
`;

exports[`<TextArea /> component should render text area with floating label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ffffff;
  min-height: 100px;
  width: 100%;
  outline: none;
  color: #252525;
  resize: none;
  padding: 24px 12px 12px 12px;
  border: 0;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-2::-webkit-input-placeholder {
  color: #3e3e3e;
}

.emotion-2::-moz-placeholder {
  color: #3e3e3e;
}

.emotion-2:-ms-input-placeholder {
  color: #3e3e3e;
}

.emotion-2::placeholder {
  color: #3e3e3e;
}

.emotion-2:focus-within,
.emotion-2:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-2:-moz-read-only:not(:disabled) {
  border-color: #e6e6e6;
  color: #3e3e3e;
  background-color: #f2f2f2;
}

.emotion-2:read-only:not(:disabled) {
  border-color: #e6e6e6;
  color: #3e3e3e;
  background-color: #f2f2f2;
}

.emotion-2:-moz-read-only:not(:disabled):focus-within {
  border: 1px solid #00677f;
}

.emotion-2:-moz-read-only:not(:disabled):hover {
  border: 1px solid #00677f;
}

.emotion-2:read-only:not(:disabled):focus-within,
.emotion-2:read-only:not(:disabled):hover {
  border: 1px solid #00677f;
}

.emotion-2:disabled {
  cursor: not-allowed;
  color: #a9a9a9;
}

<div>
  <div
    class="emotion-0"
    style="position: relative; align-items: flex-start;"
  >
    <label
      class="emotion-1"
      data-testid="label-field"
      for="my-awesome-text-area-textarea"
      style="z-index: 1;"
    >
      My awesome text area
    </label>
    <textarea
      class="emotion-2 emotion-3"
      data-error="false"
      data-testid="my-awesome-text-area-textarea"
      id="my-awesome-text-area-textarea"
      name="awesome-textarea"
    >
      some value
    </textarea>
    <div
      class="emotion-0"
      style="flex-direction: row; justify-content: space-between; width: 100%; padding-inline: 12px; gap: 8px; margin-top: 4px;"
    />
  </div>
</div>
`;
